--- a/styles.css
+++ b/styles.css
@@ -444,7 +444,7 @@ input[type="date"], input[type="time"] {
 .header button {
     color: #fff;
     border: none;
-    padding: 5px 10px;
+    padding: 10px 15px;
     cursor: pointer;
     border-radius: 5px;
 }
@@ -453,7 +453,6 @@ input[type="date"], input[type="time"] {
 .days, .dates {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
 }
 
 .day {
@@ -471,5 +470,6 @@ input[type="date"], input[type="time"] {
 .wednesday {
     background-color: #04304b; 
     color: #fff; 
+    border-radius: 50px;;
 }
 
