--- a/styles.css
+++ b/styles.css
@@ -470,6 +470,6 @@ input[type="date"], input[type="time"] {
 .wednesday {
     background-color: #04304b; 
     color: #fff; 
-    border-radius: 50px;;
+    border-radius: 50px;
 }
 
